--- a/src/view/LoginGUI.form
+++ b/src/view/LoginGUI.form
@@ -118,8 +118,14 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jSenha">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="1234"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jUsuario">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="teste"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jUsuarioActionPerformed"/>
           </Events>
