--- a/src/view/ClienteGUI.form
+++ b/src/view/ClienteGUI.form
@@ -26,7 +26,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="cadastroClientes" pref="928" max="32767" attributes="0"/>
+              <Component id="cadastroClientes" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -502,13 +502,14 @@
             <Component class="javax.swing.JTable" name="tbClientes">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="0">
+                  <Table columnCount="7" rowCount="0">
                     <Column editable="false" title="Nome" type="java.lang.Object"/>
                     <Column editable="false" title="Telefone" type="java.lang.Object"/>
                     <Column editable="false" title="Endere&#xe7;o" type="java.lang.Object"/>
                     <Column editable="false" title="N&#xfa;mero" type="java.lang.Object"/>
                     <Column editable="false" title="Bairro" type="java.lang.Object"/>
                     <Column editable="false" title="Cidade" type="java.lang.Object"/>
+                    <Column editable="false" title="Obs Inativo" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
